--- a/index.html
+++ b/index.html
@@ -146,14 +146,17 @@
         .boton-principal i {
             margin-right: 10px;
         }
-        /* --- MENÚ INTERACTIVO --- */
-        .menu-interactivo {
+       
+
+         .menu-interactivo {
             display: flex;
             justify-content: space-around;
-            margin-top: 20px;
-            padding: 0 15px;
-            background: var(--color-barra-inferior); /* Barra de color diferente */
-            border-radius: 12px;
+            background-color: #d3d3d3; /* Fondo gris */
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            border-top: 1px solid #ccc;
         }
         .menu-item {
             cursor: pointer;
