--- a/index.html
+++ b/index.html
@@ -19,18 +19,17 @@
             --texto-secundario: #555;
             --fondo: #ffffff;
             --fondo-alternativo: #f7f8fc;
-            --color-barra-inferior: #e0e0e0; /* Color de la barra inferior */
         }
         /* --- ESTILOS GENERALES --- */
         body {
             font-family: 'Inter', sans-serif;
             margin: 0;
+            padding: 20px; 
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             background-color: var(--fondo-alternativo);
-            padding: 20px;
             box-sizing: border-box;
         }
         /* --- CONTENEDOR PRINCIPAL DE LA TARJETA --- */
@@ -66,12 +65,12 @@
         }
         /* --- CUERPO DE LA TARJETA --- */
         .cuerpo {
-            padding: 80px 30px 40px 30px;
+            padding: 70px 30px 30px 30px;
         }
-        /* --- TEXTOS --- */
+        /* --- TEXTOS (TAMAÑOS AJUSTADOS) --- */
         .nombre {
             font-family: 'Oswald', sans-serif;
-            font-size: 3em;
+            font-size: 2.8em;
             color: var(--texto-principal);
             margin: 0;
             line-height: 1.1;
@@ -80,24 +79,24 @@
             opacity: 0;
         }
         .titulo {
-            font-size: 1.2em;
+            font-size: 1.1em;
             font-weight: 700;
             color: var(--rojo-marca);
-            margin: 5px 0 25px 0;
+            margin: 5px 0 20px 0;
             animation: slideInDown 0.8s 0.8s ease-out forwards;
             opacity: 0;
         }
         .descripcion {
-            font-size: 1em;
+            font-size: 0.95em;
             color: var(--texto-secundario);
-            margin-bottom: 35px;
+            margin-bottom: 30px;
             line-height: 1.7;
             animation: slideInDown 0.8s 1s ease-out forwards;
             opacity: 0;
         }
         /* --- SECCIÓN DE REDES SOCIALES --- */
         .subtitulo-redes {
-            font-size: 1em;
+            font-size: 0.9em;
             font-weight: 500;
             color: var(--texto-secundario);
             margin-bottom: 15px;
@@ -107,30 +106,30 @@
         .redes-sociales {
             display: flex;
             justify-content: center;
-            gap: 22px;
-            margin-bottom: 40px;
+            gap: 20px;
+            margin-bottom: 30px;
             animation: slideInDown 0.8s 1.3s ease-out forwards;
             opacity: 0;
         }
         .icono-social {
             color: #ccc;
-            font-size: 1.8em;
+            font-size: 1.6em;
             transition: transform 0.3s, color 0.3s;
         }
         .icono-social:hover {
             transform: translateY(-3px);
             color: var(--rojo-marca);
         }
-        /* --- BOTÓN PRINCIPAL (CALL TO ACTION) --- */
+        /* --- BOTÓN PRINCIPAL (TAMAÑO AJUSTADO) --- */
         .boton-principal {
-            display: block; /* Ocupa todo el ancho */
+            display: block;
             background: var(--rojo-marca);
             color: white;
-            padding: 18px 35px;
+            padding: 16px 30px;
             border-radius: 12px;
             text-decoration: none;
             font-weight: 700;
-            font-size: 1.1em;
+            font-size: 1em;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
@@ -146,82 +145,121 @@
         .boton-principal i {
             margin-right: 10px;
         }
-       
-
-         .menu-interactivo {
+        
+        /* --- NUEVO MENÚ INTERACTIVO INTEGRADO --- */
+        .menu-interactivo {
             display: flex;
             justify-content: space-around;
-            background-color: #d3d3d3; /* Fondo gris */
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            border-top: 1px solid #ccc;
+            align-items: center;
+            background-color: var(--rojo-marca);
+            padding: 12px 0;
+            margin-top: 30px; /* Espacio entre el botón y la barra */
         }
         .menu-item {
             cursor: pointer;
-            padding: 12px 8px;
-            border-radius: 12px;
-            background: var(--fondo);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-            flex: 1;
-            margin: 0 5px;
+            transition: transform 0.2s ease;
         }
         .menu-item:hover {
             transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         }
         .menu-item-icon {
-            font-size: 1.8em; /* Icono más pequeño */
-            color: var(--rojo-marca);
-            margin-bottom: 8px;
+            font-size: 1.4em; /* Iconos más pequeños */
+            color: white;
+            opacity: 0.8;
+            transition: opacity 0.2s ease;
         }
-        .menu-item-text {
-            font-size: 0.9em; /* Texto más pequeño */
-            font-weight: 500;
+        .menu-item:hover .menu-item-icon {
+            opacity: 1;
+        }
+
+        /* --- VENTANAS MODALES --- */
+        .modal-container {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+            backdrop-filter: blur(5px);
+        }
+        .modal-content {
+            background: var(--fondo);
+            padding: 25px;
+            border-radius: 16px;
+            max-width: 500px;
+            width: 90%;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            position: relative;
+            animation: scaleInModal 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+        .close-modal {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            background: #f0f0f0;
+            border: none;
+            color: #555;
+            font-size: 1.2em;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-body h2 {
+            font-family: 'Oswald', sans-serif;
+            color: var(--rojo-marca);
+            margin-top: 0;
+        }
+        .modal-body p, .modal-body li {
+            color: var(--texto-secundario);
+            line-height: 1.7;
+        }
+        .modal-body ul {
+            list-style: none;
+            padding-left: 0;
+        }
+        .modal-body li {
+            padding: 8px 0;
+            border-bottom: 1px solid #eee;
+        }
+        .modal-body li strong {
             color: var(--texto-principal);
         }
+        .mapa-responsive {
+            overflow: hidden;
+            padding-bottom: 56.25%;
+            position: relative;
+            height: 0;
+            border-radius: 8px;
+            margin-top: 15px;
+        }
+        .mapa-responsive iframe {
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            border: 0;
+        }
+
         /* --- ANIMACIONES --- */
-        @keyframes fadeInCard {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes scaleIn {
-            from { opacity: 0; transform: translateX(-50%) scale(0); }
-            to { opacity: 1; transform: translateX(-50%) scale(1); }
-        }
-        @keyframes slideInDown {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        /* --- RESPONSIVE --- */
-        @media (max-width: 600px) {
-            .tarjeta {
-                max-width: 90%;
-            }
-            .nombre {
-                font-size: 2.5em;
-            }
-            .titulo {
-                font-size: 1.1em;
-            }
-            .descripcion {
-                font-size: 0.9em;
-            }
-            .menu-item-icon {
-                font-size: 1.5em;
-            }
-            .menu-item-text {
-                font-size: 0.8em;
-            }
-        }
+        @keyframes fadeInCard { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes scaleIn { from { opacity: 0; transform: translateX(-50%) scale(0); } to { opacity: 1; transform: translateX(-50%) scale(1); } }
+        @keyframes slideInDown { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes scaleInModal { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
     </style>
 </head>
 <body>
     <div class="tarjeta">
         <div class="header">
-            <img class="logo" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Fp%2FMrCHICKEN-100070128615991%2F&psig=AOvVaw12-SvWCjnM3O1y2bsHgMVx&ust=1753734771268000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLj03KXx3Y4DFQAAAAAdAAAAABAE" alt="Logo de Mr. Chicken">
+            <img class="logo" src="https://scontent.fgye1-1.fna.fbcdn.net/v/t39.30808-1/274315392_302099308804354_379102435422847990_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGj5p9-q-r-s-t-u-v-w-x-y-z-a-b-c-d-e-f-g&_nc_ohc=b-gZJ3y2uYwAX8_7o-u&_nc_ht=scontent.fgye1-1.fna&oh=00_AfCjR_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_z_a_b_c&oe=66A96B2B" alt="Logo de Mr. Chicken">
         </div>
         <div class="cuerpo">
             <h1 class="nombre">Mr. Chicken</h1>
@@ -242,70 +280,73 @@
                 <i class="fab fa-whatsapp"></i> Pedir por WhatsApp
             </a>
         </div>
-        <!-- Menú interactivo -->
+        <!-- Menú interactivo integrado -->
         <div class="menu-interactivo">
-            <div class="menu-item" onclick="showRestaurantInfo()">
+            <div class="menu-item" onclick="showModal('info')">
                 <i class="fas fa-utensils menu-item-icon"></i>
-                <p class="menu-item-text">Restaurante</p>
             </div>
-            <div class="menu-item" onclick="showMenu()">
+            <div class="menu-item" onclick="showModal('menu')">
                 <i class="fas fa-list-alt menu-item-icon"></i>
-                <p class="menu-item-text">Menú</p>
             </div>
-            <div class="menu-item" onclick="showLocation()">
+            <div class="menu-item" onclick="showModal('location')">
                 <i class="fas fa-map-marker-alt menu-item-icon"></i>
-                <p class="menu-item-text">Ubicación</p>
             </div>
         </div>
     </div>
 
-    <!-- Ventanas modales para información adicional -->
-    <div id="modal-container" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); z-index: 999;">
-        <div id="modal-content" style="background: var(--fondo); padding: 20px; border-radius: 24px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); max-width: 90%;">
-            <button id="close-modal" style="position: absolute; top: 10px; right: 10px; background: transparent; border: none; color: white; font-size: 1.5em;">×</button>
+    <!-- Ventana modal única para toda la información -->
+    <div id="modal-container" class="modal-container">
+        <div id="modal-content" class="modal-content">
+            <button id="close-modal" class="close-modal">&times;</button>
             <div id="modal-body"></div>
         </div>
     </div>
 
     <script>
-        function showRestaurantInfo() {
-            const modalBody = document.getElementById('modal-body');
-            modalBody.innerHTML = `
+        const modalContainer = document.getElementById('modal-container');
+        const modalBody = document.getElementById('modal-body');
+        const closeModalButton = document.getElementById('close-modal');
+
+        const modalContent = {
+            info: `
                 <h2>Información del Restaurante</h2>
                 <p>Bienvenido a Mr. Chicken, tu destino para disfrutar de sabores auténticos y experiencias memorables.</p>
                 <p><strong>Dirección:</strong> Calle 123, Quevedo, Ecuador</p>
                 <p><strong>Teléfono:</strong> +593 999999999</p>
                 <p><strong>Horarios:</strong> Lunes a Domingo, 10:00 AM - 10:00 PM</p>
-            `;
-            document.getElementById('modal-container').style.display = 'block';
-        }
-
-        function showMenu() {
-            const modalBody = document.getElementById('modal-body');
-            modalBody.innerHTML = `
-                <h2>Menú del Día</h2>
+            `,
+            menu: `
+                <h2>Nuestro Menú</h2>
                 <ul>
                     <li><strong>Alitas Picantes:</strong> Alitas de pollo fritas con nuestra mezcla secreta de especias.</li>
                     <li><strong>Hamburguesa Gourmet:</strong> Hamburguesa hecha con carne premium, queso derretido y vegetales frescos.</li>
                     <li><strong>Papas Fritas:</strong> Papas doradas acompañadas de nuestro exclusivo ketchup casero.</li>
                     <li><strong>Postre del Día:</strong> Delicioso pastel de chocolate artesanal.</li>
                 </ul>
-            `;
-            document.getElementById('modal-container').style.display = 'block';
+            `,
+            location: `
+                <h2>Nuestra Ubicación</h2>
+                <p>Encuéntranos en el corazón de Quevedo:</p>
+                <div class="mapa-responsive">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.279865183818!2d-79.4646813857335!3d-1.028889999172421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902b18b14a0d9c3b%3A0x1b1d833e9e1e3e4d!2sParque%20Central%20de%20Quevedo!5e0!3m2!1ses!2sec!4v1678886400000" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            `
+        };
+
+        function showModal(contentKey) {
+            modalBody.innerHTML = modalContent[contentKey];
+            modalContainer.style.display = 'flex';
         }
 
-        function showLocation() {
-            const modalBody = document.getElementById('modal-body');
-            modalBody.innerHTML = `
-                <h2>Ubicación</h2>
-                <p>Encuentranos en:</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.440181082876!2d-79.0138183852075!3d-0.2298489673787778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91b9090909090909%3A0x91b9090909090909!2sQuevedo%2C%20Ecuador!5e0!3m2!1ses!2sec!4v1753734771268!5m2!1ses!2sec" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            `;
-            document.getElementById('modal-container').style.display = 'block';
+        function closeModal() {
+            modalContainer.style.display = 'none';
         }
 
-        document.getElementById('close-modal').addEventListener('click', () => {
-            document.getElementById('modal-container').style.display = 'none';
+        closeModalButton.addEventListener('click', closeModal);
+        modalContainer.addEventListener('click', (event) => {
+            if (event.target === modalContainer) {
+                closeModal();
+            }
         });
     </script>
 </body>
