--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         /* --- BOTÓN PRINCIPAL (TAMAÑO AJUSTADO) --- */
         .boton-principal {
             display: block;
-            background: var(--rojo-marca);
+            background:#ec331a;
             color: white;
             padding: 16px 30px;
             border-radius: 12px;
@@ -151,7 +151,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            background-color: var(--rojo-marca);
+            background-color: #a40000;
             padding: 12px 0;
             margin-top: 30px; /* Espacio entre el botón y la barra */
         }
@@ -259,13 +259,13 @@
 <body>
     <div class="tarjeta">
         <div class="header">
-            <img class="logo" src="https://scontent.fgye1-1.fna.fbcdn.net/v/t39.30808-1/274315392_302099308804354_379102435422847990_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGj5p9-q-r-s-t-u-v-w-x-y-z-a-b-c-d-e-f-g&_nc_ohc=b-gZJ3y2uYwAX8_7o-u&_nc_ht=scontent.fgye1-1.fna&oh=00_AfCjR_k_l_m_n_o_p_q_r_s_t_u_v_w_x_y_z_a_b_c&oe=66A96B2B" alt="Logo de Mr. Chicken">
+            <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLEJdYvzriVkj13c5g71Je6ZE0gbi0nwJUyQ&s" alt="Logo de Mr. Chicken">
         </div>
         <div class="cuerpo">
             <h1 class="nombre">Mr. Chicken</h1>
             <p class="titulo">El Sabor Auténtico de Quevedo</p>
             <p class="descripcion">
-                Especialistas en crear momentos inolvidables a través del sabor. Desde nuestras famosas alitas hasta hamburguesas gourmet, cada plato es una obra de arte culinaria.
+                Especialistas en crear momentos inolvidables a través del sabor.
             </p>
             <p class="subtitulo-redes">Síguenos en nuestras redes</p>
             <div class="redes-sociales">
