--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: var(--rojo-marca);
+            background: #f11e1e;
             color: white;
             padding: 12px 18px; /* CAMBIO: Padding ajustado */
             text-decoration: none;
@@ -165,7 +165,7 @@
         .menu-interactivo {
             display: flex;
             justify-content: space-around;
-            background-color: #f33e3e; /* CAMBIO: Fondo rojo */
+            background-color: #910707; /* CAMBIO: Fondo rojo */
         }
 
         .menu-item {
@@ -302,7 +302,7 @@
             </p>
 
             <div class="lista-botones">
-                <h3 class="seccion-titulo">Síguenos en Redes</h3>
+                <p class="seccion-titulo">Síguenos en Redes</p>
                 <a href="https://tiktok.com/@tucuenta" target="_blank" class="boton-red tiktok">
                     <i class="fab fa-tiktok"></i> TikTok
                 </a>
