--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         /* --- TEXTOS (TAMAÑOS AJUSTADOS Y EQUILIBRADOS) --- */
         .nombre {
             font-family: 'Oswald', sans-serif;
-            font-size: 2.2em; /* CAMBIO: Tamaño aumentado */
-            color: var(--rojo-marca); /* CAMBIO: Color rojo */
+            font-size: 2.2em;
+            color: var(--rojo-marca);
             margin: 0;
             line-height: 1.2;
             text-transform: uppercase;
@@ -96,8 +96,8 @@
 
         .titulo {
             font-size: 1em;
-            font-weight: 500;
-            color: var(--texto-principal); /* CAMBIO: Color oscuro */
+            font-weight: 700;
+            color: #2e7d32;
             margin: 5px 0 15px 0;
             animation: slideInDown 0.8s 0.8s ease-out forwards;
             opacity: 0;
@@ -115,8 +115,8 @@
         
         .seccion-titulo {
             font-family: 'Oswald', sans-serif;
-            font-size: 1.1em; /* CAMBIO: Tamaño aumentado */
-            color: var(--verde-marca); /* CAMBIO: Color verde */
+            font-size: 1.1em;
+            color: #565c56;
             margin-bottom: 15px;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -135,12 +135,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #f11e1e;
+            background: var(--rojo-marca);
             color: white;
-            padding: 12px 18px; /* CAMBIO: Padding ajustado */
+            padding: 12px 18px;
             text-decoration: none;
             font-weight: 500;
-            font-size: 0.85em; /* CAMBIO: Tamaño aumentado */
+            font-size: 0.85em;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             margin-bottom: 12px;
@@ -148,11 +148,12 @@
             transition: all 0.3s ease;
             animation: slideInDown 0.8s 1.5s ease-out forwards;
             opacity: 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* CAMBIO: Sombreado añadido */
         }
 
         .boton-red:hover {
             transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(211, 47, 47, 0.25);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25); /* CAMBIO: Sombreado intensificado en hover */
             background-color: var(--rojo-oscuro);
         }
 
@@ -165,13 +166,13 @@
         .menu-interactivo {
             display: flex;
             justify-content: space-around;
-            background-color: #910707; /* CAMBIO: Fondo rojo */
+            background-color: var(--rojo-oscuro);
         }
 
         .menu-item {
             flex: 1;
             padding: 5px 5px;
-            color: #ffffff; /* CAMBIO: Color blanco */
+            color: #ffffff;
             cursor: pointer;
             transition: background-color 0.3s ease, color 0.3s ease;
             text-align: center;
@@ -182,7 +183,7 @@
         }
         
         .menu-item:hover {
-            background-color: var(--rojo-oscuro); /* CAMBIO: Hover a rojo oscuro */
+            background-color: var(--rojo-marca);
         }
 
         .menu-item-icon {
@@ -302,7 +303,7 @@
             </p>
 
             <div class="lista-botones">
-                <p class="seccion-titulo">Síguenos en Redes</p>
+                <h3 class="seccion-titulo">Síguenos en Redes</h3>
                 <a href="https://tiktok.com/@tucuenta" target="_blank" class="boton-red tiktok">
                     <i class="fab fa-tiktok"></i> TikTok
                 </a>
