--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: var(--rojo-marca);
+            background:#df1a1ae0;
             color: white;
             padding: 12px 18px;
             text-decoration: none;
