--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         .nombre {
             font-family: 'Oswald', sans-serif;
             font-size: 2.2em;
-            color: #3b3838;
+            color: #000000;
             margin: 0;
             line-height: 1.2;
             text-transform: uppercase;
@@ -97,7 +97,7 @@
         .titulo {
             font-size: 1em;
             font-weight: 700;
-            color: #0d4c11;
+            color: #c04a0b;
             margin: 5px 0 15px 0;
             animation: slideInDown 0.8s 0.8s ease-out forwards;
             opacity: 0;
