--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             --rojo-marca: #D32F2F;
             --rojo-oscuro: #B71C1C;
             --amarillo-marca: #FFC107;
-            --verde-marca: #2E7D32; /* Color verde para el borde */
+            --verde-marca: #f6f6f6; /* Color verde para el borde */
             --texto-principal: #212121;
             --texto-secundario: #616161;
             --fondo: #ffffff;
@@ -97,7 +97,7 @@
         .titulo {
             font-size: 1em;
             font-weight: 700;
-            color: #c04a0b;
+            color: #d75e1c;
             margin: 5px 0 15px 0;
             animation: slideInDown 0.8s 0.8s ease-out forwards;
             opacity: 0;
