--- a/index.html
+++ b/index.html
@@ -282,6 +282,22 @@
             border: 0;
         }
 
+        /* --- AJUSTES SOLO PARA MÓVILES --- */
+@media screen and (max-width: 600px) {
+    body {
+        padding: 0; /* elimina bordes del body en móviles */
+    }
+
+    .tarjeta {
+        border-radius: 0; /* sin esquinas redondeadas */
+        width: 100vw; /* ocupa todo el ancho de la pantalla */
+        max-width: 100vw;
+        box-shadow: none; /* opcional: quitar sombra si no quieres separación visual */
+        border: none; /* opcional: sin borde */
+    }
+}
+
+
         /* --- ANIMACIONES --- */
         @keyframes fadeInCard { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
         @keyframes scaleIn { from { opacity: 0; transform: translateX(-50%) scale(0.5); } to { opacity: 1; transform: translateX(-50%) scale(1); } }
