--- a/index.html
+++ b/index.html
@@ -282,20 +282,36 @@
             border: 0;
         }
 
-        /* --- AJUSTES SOLO PARA MÓVILES --- */
-@media screen and (max-width: 600px) {
+          @media screen and (max-width: 600px) {
     body {
-        padding: 0; /* elimina bordes del body en móviles */
+        padding: 0;
+        margin: 0;
+    }
+
+    header {
+        width: 100vw;
+        max-width: 100vw;
+        border-radius: 0;
+        margin: 0;
     }
 
     .tarjeta {
-        border-radius: 0; /* sin esquinas redondeadas */
-        width: 100vw; /* ocupa todo el ancho de la pantalla */
+        width: 100vw;
         max-width: 100vw;
-        box-shadow: none; /* opcional: quitar sombra si no quieres separación visual */
-        border: none; /* opcional: sin borde */
+        border-radius: 0;
+        margin: 0;
+        box-shadow: none;
+        border: none;
+    }
+
+    footer, .pie {
+        width: 100vw;
+        max-width: 100vw;
+        margin: 0;
+        border-radius: 0;
     }
 }
+
 
 
         /* --- ANIMACIONES --- */
