--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@
             --borde-suave: #eeeeee;
         }
 
-        /* --- ESTILOS GENERALES Y MEJORAS DE RENDERIZADO --- */
-        body {
-            font-family: 'Inter', sans-serif;
+        /* --- ESTILOS GENERALES Y MEJORAS DE RENDERIZADO (Mobile-First) --- */
+        html, body {
+            height: 100%;
             margin: 0;
-            padding: 20px; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: var(--fondo-alternativo);
-            box-sizing: border-box;
+            padding: 0;
+            font-family: 'Inter', sans-serif;
+            background-color: var(--fondo);
             -webkit-font-smoothing: antialiased;
             text-rendering: optimizeLegibility;
+            box-sizing: border-box;
         }
 
-        /* --- CONTENEDOR PRINCIPAL DE LA TARJETA --- */
+        *, *:before, *:after {
+          box-sizing: inherit;
+        }
+
+        /* --- CONTENEDOR PRINCIPAL DE LA TARJETA (Mobile-First) --- */
         .tarjeta {
             width: 100%;
-            max-width: 400px;
+            height: 100%;
             background: var(--fondo);
-            border-radius: 24px;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.08);
-            overflow: hidden;
+            display: flex;
+            flex-direction: column;
             text-align: center;
             animation: fadeInCard 1s ease-out forwards;
-            border: 1px solid var(--borde-suave);
+            /* Sin borde, sombra o radio para la vista de pantalla completa móvil */
         }
 
         /* --- ENCABEZADO CON PORTADA Y PERFIL --- */
@@ -60,6 +60,7 @@
             position: relative;
             height: 150px;
             background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.15)), url('https://images.pexels.com/photos/2725744/pexels-photo-2725744.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center/cover;
+            flex-shrink: 0; /* Evita que el encabezado se encoja */
         }
 
         .logo {
@@ -80,6 +81,9 @@
         /* --- CUERPO DE LA TARJETA --- */
         .cuerpo {
             padding: 70px 30px 30px 30px;
+            flex: 1; /* Hace que el cuerpo crezca para llenar el espacio disponible */
+            overflow-y: auto; /* Permite el desplazamiento solo para el cuerpo */
+            -webkit-overflow-scrolling: touch; /* Desplazamiento suave en iOS */
         }
 
         /* --- TEXTOS (TAMAÑOS AJUSTADOS Y EQUILIBRADOS) --- */
@@ -167,6 +171,7 @@
             display: flex;
             justify-content: space-around;
             background-color: var(--rojo-oscuro);
+            flex-shrink: 0; /* Evita que el pie de página se encoja */
         }
 
         .menu-item {
@@ -282,37 +287,32 @@
             border: 0;
         }
 
-          @media screen and (max-width: 600px) {
-    body {
-        padding: 0;
-        margin: 0;
-    }
+        /* --- Media Query para Vista de Escritorio/Tableta --- */
+        @media screen and (min-width: 481px) {
+            body {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 20px;
+                background-color: var(--fondo-alternativo);
+            }
 
-    header {
-        width: 100vw;
-        max-width: 100vw;
-        border-radius: 0;
-        margin: 0;
-    }
+            .tarjeta {
+                width: 100%;
+                max-width: 400px;
+                height: auto;
+                max-height: 95vh;
+                border-radius: 24px;
+                box-shadow: 0 20px 50px rgba(0, 0, 0, 0.08);
+                border: 1px solid var(--borde-suave);
+                overflow: hidden; /* Vuelve a aplicar overflow hidden para las esquinas redondeadas */
+            }
 
-    .tarjeta {
-        width: 100vw;
-        max-width: 100vw;
-        border-radius: 0;
-        margin: 0;
-        box-shadow: none;
-        border: none;
-    }
-
-    footer, .pie {
-        width: 100vw;
-        max-width: 100vw;
-        margin: 0;
-        border-radius: 0;
-    }
-}
-
-
+            .cuerpo {
+                flex: initial; /* Restablece la propiedad flex */
+                overflow-y: visible; /* Restablece el desbordamiento */
+            }
+        }
 
         /* --- ANIMACIONES --- */
         @keyframes fadeInCard { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
