--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mr. Chicken - Tarjeta de Presentación Digital</title>
+    <!-- Color del tema para la barra del navegador en móviles -->
+    <meta name="theme-color" content="#D32F2F">
     
     <!-- Fuentes de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
