--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         .titulo {
             font-size: 1em;
             font-weight: 700;
-            color: #8e7b7a;
+            color: #645c5c;
             margin: 5px 0 15px 0;
             animation: slideInDown 0.8s 0.8s ease-out forwards;
             opacity: 0;
