--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         .titulo {
             font-size: 1em;
             font-weight: 700;
-            color: var(--rojo-principal); /* Nuevo color */
+            color: #5e5553; /* Nuevo color */
             margin: 5px 0 15px 0;
             animation: slideInDown 0.8s 0.8s ease-out forwards;
             opacity: 0;
