--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         .titulo {
             font-size: 1em;
             font-weight: 700;
-            color: #d7170d;
+            color: #372d2d;
             margin: 5px 0 15px 0;
             animation: slideInDown 0.8s 0.8s ease-out forwards;
             opacity: 0;
@@ -399,4 +399,3 @@
     </script>
 </body>
 </html>
-
