--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </p>
             
             <div class="seccion-botones">
-                <h3 class="seccion-subtitulo">Contacto Directo</h3>
+                <h3 class="seccion-subtitulo">Agenda tu cita ahora 👇</h3>
                 <div class="botones-contacto">
                     <a href="https://wa.me/593123456789" target="_blank" class="boton primario">
                         <i class="fab fa-whatsapp"></i> Whatsapp
