--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </p>
             
             <div class="seccion-botones">
-                <h3 class="seccion-subtitulo">Consulta Legal</h3>
+                <h3 class="seccion-subtitulo">👇 Agenda tu cita ahora 👇</h3>
                 <div class="botones-contacto">
                     <a href="https://wa.me/593981653921" target="_blank" class="boton primario whatsapp-pulse">
                         <i class="fab fa-whatsapp"></i> Whatsapp
