--- a/index.html
+++ b/index.html
@@ -1,413 +1,239 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dra. Ana Mieles Cedeño - Tarjeta de Presentación Profesional</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dra. Ana Mieles Cedeño - Tarjeta Profesional</title>
 
-    <!-- Fuentes Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" />
 
-    <!-- Font Awesome -->
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    />
+  <style>
+    :root {
+      --vino: #831843;
+      --dorado: #c59a65;
+      --fondo: #faf8f5;
+      --blanco: #fff;
+      --texto: #2c2c2c;
+      --gris: #444;
+      --verde-wsp: #25d366;
+    }
 
-    <style>
-        :root {
-            --color-vino: #831843;
-            --color-dorado: #c59a65;
-            --color-texto-principal: #2c2c2c;
-            --color-texto-secundario: #444444;
-            --color-fondo: #faf8f5;
-            --color-blanco: #ffffff;
-            --color-boton-vino: #a22a49;
-            --color-boton-vino-hover: #6b1a33;
-        }
+    * {
+      box-sizing: border-box;
+    }
 
-        * {
-            box-sizing: border-box;
-        }
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: var(--fondo);
+      color: var(--texto);
+    }
 
-        body {
-            margin: 0;
-            background-color: var(--color-fondo);
-            font-family: 'Poppins', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-            color: var(--color-texto-principal);
-        }
+    .tarjeta {
+      max-width: 500px;
+      margin: 20px auto;
+      background: var(--blanco);
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
 
-        .tarjeta {
-            background-color: var(--color-blanco);
-            max-width: 380px;
-            width: 100%;
-            border-radius: 16px;
-            box-shadow: 0 12px 28px rgba(0, 0, 0, 0.12);
-            overflow: hidden;
-            text-align: center;
-            animation: fadeIn 0.9s ease-out forwards;
-            display: flex;
-            flex-direction: column;
-        }
+    .encabezado {
+      background: linear-gradient(rgba(131, 24, 67, 0.6), rgba(131, 24, 67, 0.9)),
+        url('https://images.pexels.com/photos/6077326/pexels-photo-6077326.jpeg') center/cover;
+      height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+    }
 
-        .header {
-            position: relative;
-            height: 150px;
-            background:
-                linear-gradient(
-                    rgba(131, 24, 67, 0.6),
-                    rgba(131, 24, 67, 0.9)
-                ),
-                url('https://images.pexels.com/photos/6077326/pexels-photo-6077326.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260')
-                    center/cover no-repeat;
-            filter: brightness(0.85);
-        }
+    .foto {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      border: 4px solid var(--blanco);
+      object-fit: cover;
+      margin-bottom: -60px;
+      background-color: var(--blanco);
+    }
 
-        .logo {
-            width: 110px;
-            height: 110px;
-            border-radius: 50%;
-            border: 4px solid var(--color-blanco);
-            position: absolute;
-            bottom: -55px;
-            left: 50%;
-            transform: translateX(-50%);
-            object-fit: cover;
-            object-position: center top;
-            background-color: var(--color-blanco);
-            box-shadow: 0 4px 15px rgba(131, 24, 67, 0.25);
-            transition: transform 0.3s ease;
-        }
+    .contenido {
+      padding: 70px 20px 20px;
+      text-align: center;
+    }
 
-        .logo:hover,
-        .logo:focus {
-            transform: translateX(-50%) scale(1.05);
-            outline: none;
-        }
+    .nombre {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.8em;
+      color: var(--vino);
+      margin: 0;
+    }
 
-        .contenido {
-            padding: 70px 30px 35px;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
+    .especialidad {
+      color: var(--dorado);
+      font-weight: 600;
+      font-size: 1em;
+      margin: 10px 0;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
 
-        .nombre {
-            font-family: 'Playfair Display', serif;
-            font-size: 1.8em;
-            margin: 0;
-            color: var(--color-vino);
-            font-weight: 700;
-            user-select: text;
-        }
+    .descripcion {
+      font-size: 0.9em;
+      color: var(--gris);
+      margin: 10px 0 20px;
+    }
 
-        .especialidad {
-            color: var(--color-dorado);
-            font-weight: 600;
-            font-size: 1em;
-            margin: 0 auto 10px auto;
-            text-transform: uppercase;
-            letter-spacing: 1.5px;
-            border-bottom: 2px solid var(--color-dorado);
-            padding-bottom: 4px;
-            max-width: fit-content;
-            user-select: text;
-        }
+    .areas {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      font-size: 0.9em;
+    }
 
-        .descripcion {
-            font-size: 0.9em;
-            line-height: 1.6;
-            color: var(--color-texto-secundario);
-            margin: 0 auto;
-            padding: 0 10px;
-            user-select: text;
-        }
+    .area {
+      background: #f3f1ef;
+      padding: 10px;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      justify-content: center;
+    }
 
-        .areas-practica {
-            margin-top: 15px;
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-            color: var(--color-texto-secundario);
-            font-size: 0.9em;
-            user-select: none;
-        }
+    .area i {
+      color: var(--dorado);
+    }
 
-        .area {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            padding: 10px 14px;
-            border-radius: 12px;
-            background-color: #f9f7f4;
-            transition: background-color 0.3s ease, color 0.3s ease;
-            cursor: default;
-        }
+    .botones {
+      margin: 20px 0;
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
 
-        .area i {
-            color: var(--color-dorado);
-            font-size: 1.3em;
-            min-width: 26px;
-            text-align: center;
-        }
+    .boton {
+      padding: 10px 16px;
+      border-radius: 6px;
+      color: var(--blanco);
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+    }
 
-        .area:hover,
-        .area:focus {
-            background-color: var(--color-dorado);
-            color: var(--color-blanco);
-            outline: none;
-        }
-        
-        .area:hover i {
-            color: var(--color-blanco);
-        }
+    .whatsapp {
+      background: var(--verde-wsp);
+    }
 
-        .separador {
-            border: 0;
-            height: 2px;
-            background: var(--color-dorado);
-            margin: 10px auto 15px auto;
-            width: 80px;
-            animation: drawLine 1s 0.5s ease-out forwards;
-            transform-origin: center;
-            transform: scaleX(0);
-            border-radius: 1px;
-        }
+    .llamar {
+      background: var(--vino);
+    }
 
-        .cta {
-            font-size: 0.8em;
-            font-weight: 700;
-            color: var(--color-texto-principal);
-            margin: 0;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            user-select: none;
-        }
+    .redes {
+      background: var(--vino);
+      color: var(--blanco);
+      text-align: center;
+      padding: 15px;
+    }
 
-        .botones {
-            display: flex;
-            justify-content: center;
-            gap: 14px;
-            margin-top: 12px;
-            flex-wrap: wrap;
-        }
+    .redes i {
+      margin: 0 10px;
+      color: var(--dorado);
+      transition: 0.3s;
+    }
 
-        .boton {
-            flex: 1 1 140px;
-            max-width: 160px;
-            background-color: var(--color-boton-vino);
-            color: var(--color-blanco);
-            font-weight: 600;
-            font-size: 0.9em;
-            padding: 12px 18px;
-            border-radius: 8px;
-            text-decoration: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 8px;
-            box-shadow: 0 5px 14px rgba(162, 42, 73, 0.4);
-            transition: all 0.3s ease;
-            user-select: none;
-            cursor: pointer;
-            border: none;
-        }
+    .redes i:hover {
+      color: var(--blanco);
+    }
 
-        .boton i {
-            font-size: 1.2rem;
-        }
+    .footer {
+      font-size: 0.7em;
+      background: #701439;
+      color: #fff;
+      text-align: center;
+      padding: 8px;
+    }
 
-        .boton:hover,
-        .boton:focus-visible {
-            background-color: var(--color-boton-vino-hover);
-            box-shadow: 0 8px 20px rgba(107, 26, 51, 0.6);
-            transform: translateY(-3px);
-            outline: none;
-        }
+    /* Escritorio - Vista horizontal */
+    @media (min-width: 992px) {
+      .tarjeta {
+        display: flex;
+        max-width: 900px;
+        height: 100vh;
+        border-radius: 0;
+      }
 
-        .boton.whatsapp {
-            background-color: #25d366;
-            box-shadow: 0 5px 14px rgba(37, 211, 102, 0.5);
-            animation: pulse 2.5s infinite 2s;
-        }
+      .encabezado {
+        flex: 1;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+      }
 
-        .boton.whatsapp:hover,
-        .boton.whatsapp:focus-visible {
-            background-color: #1da851;
-            box-shadow: 0 8px 20px rgba(29, 168, 81, 0.7);
-        }
+      .contenido {
+        flex: 1;
+        padding: 40px;
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
 
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-            100% { transform: scale(1); }
-        }
+      .foto {
+        width: 150px;
+        height: 150px;
+        margin-bottom: 20px;
+      }
 
-        .redes {
-            background-color: var(--color-vino);
-            padding: 20px 0;
-        }
-
-        .redes-titulo {
-            color: rgba(255, 255, 255, 0.9);
-            font-size: 0.75em;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            margin: 0 0 15px 0;
-            user-select: none;
-        }
-
-        .redes-contenido {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 18px;
-        }
-
-        .redes a {
-            color: var(--color-dorado);
-            font-size: 1.3rem;
-            transition: color 0.3s ease, transform 0.3s ease;
-        }
-
-        .redes a:hover,
-        .redes a:focus-visible {
-            color: var(--color-blanco);
-            transform: translateY(-3px);
-            outline: none;
-        }
-        
-        .footer-texto {
-            background-color: #701439;
-            padding: 10px;
-            font-size: 0.7em;
-            color: rgba(255, 255, 255, 0.6);
-            user-select: none;
-        }
-
-        @media (max-width: 400px) {
-            .tarjeta {
-                max-width: 95vw;
-            }
-            .contenido {
-                padding: 70px 15px 35px;
-            }
-            .botones {
-                flex-direction: column;
-                gap: 12px;
-                align-items: center;
-            }
-            .boton {
-                max-width: 100%;
-                width: 100%;
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes drawLine {
-            to {
-                transform: scaleX(1);
-            }
-        }
-    </style>
+      .botones {
+        justify-content: flex-start;
+      }
+    }
+  </style>
 </head>
 <body>
-    <article class="tarjeta" aria-label="Tarjeta de presentación de la abogada Dra. Ana Mieles Cedeño">
-        <header class="header">
-            <img
-                class="logo"
-                src="https://images.pexels.com/photos/3769021/pexels-photo-3769021.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                alt="Foto profesional de la Dra. Ana Mieles Cedeño"
-                onerror="this.onerror=null;this.src='https://placehold.co/120x120/B99A6B/FFFFFF?text=MC';"
-                tabindex="0"
-            />
-        </header>
 
-        <section class="contenido">
-            <h1 class="nombre" tabindex="0">Dra. Ana Mieles Cedeño</h1>
+  <div class="tarjeta">
+    <div class="encabezado">
+      <img class="foto" src="https://images.pexels.com/photos/3769021/pexels-photo-3769021.jpeg" alt="Foto Dra. Ana Mieles" />
+    </div>
+    <div class="contenido">
+      <h1 class="nombre">Dra. Ana Mieles Cedeño</h1>
+      <p class="especialidad">Abogada – Derecho Civil y Laboral</p>
+      <p class="descripcion">
+        Con 7 años de experiencia, ofrezco asesoría legal clara y efectiva para personas y empresas.
+      </p>
+      <div class="areas">
+        <div class="area"><i class="fas fa-file-signature"></i>Litigios Contractuales</div>
+        <div class="area"><i class="fas fa-users"></i>Derecho Laboral</div>
+        <div class="area"><i class="fas fa-hand-holding-usd"></i>Herencias y Sucesiones</div>
+      </div>
+      <div class="botones">
+        <a href="https://wa.me/593981653921" target="_blank" class="boton whatsapp">
+          <i class="fab fa-whatsapp"></i> Whatsapp
+        </a>
+        <a href="tel:+593981653921" class="boton llamar">
+          <i class="fas fa-phone"></i> Llamar
+        </a>
+      </div>
+    </div>
+  </div>
 
-            <p class="especialidad" tabindex="0">Abogada – Derecho Civil y Laboral</p>
+  <div class="redes">
+    Síguenos en:
+    <a href="https://tiktok.com/@tucuenta" target="_blank"><i class="fab fa-tiktok"></i></a>
+    <a href="https://youtube.com/tucanal" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://facebook.com/tupagina" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  </div>
 
-            <p class="descripcion" tabindex="0">
-                Con 7 años de experiencia, ofrezco asesoría legal especializada, brindando soluciones claras y efectivas para personas y empresas.
-            </p>
+  <div class="footer">
+    Mat. Prof. 12-3456-789 | © 2025 Dra. Ana Mieles Cedeño
+  </div>
 
-            <div class="areas-practica" aria-label="Áreas de práctica legal">
-                <div class="area" tabindex="0">
-                    <i class="fas fa-file-signature" aria-hidden="true"></i><span>Litigios Contractuales</span>
-                </div>
-                <div class="area" tabindex="0">
-                    <i class="fas fa-users" aria-hidden="true"></i><span>Derecho Laboral</span>
-                </div>
-                <div class="area" tabindex="0">
-                    <i class="fas fa-hand-holding-usd" aria-hidden="true"></i><span>Herencias y Sucesiones</span>
-                </div>
-            </div>
-
-            <hr class="separador" aria-hidden="true" />
-
-            <h2 class="cta">Solicita una Consulta</h2>
-
-            <div class="botones">
-                <a
-                    href="https://wa.me/593981653921"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="boton whatsapp"
-                    aria-label="Enviar mensaje por WhatsApp a Dra. Ana Mieles Cedeño"
-                >
-                    <i class="fab fa-whatsapp" aria-hidden="true"></i> Whatsapp
-                </a>
-
-                <a
-                    href="tel:+593981653921"
-                    class="boton"
-                    aria-label="Llamar por teléfono a Dra. Ana Mieles Cedeño"
-                >
-                    <i class="fas fa-phone" aria-hidden="true"></i> Llámanos
-                </a>
-            </div>
-        </section>
-
-        <footer class="redes" aria-label="Redes sociales de Dra. Ana Mieles Cedeño">
-            <h3 class="redes-titulo">Síguenos en Redes Sociales</h3>
-            <nav class="redes-contenido" role="navigation">
-                <a href="https://tiktok.com/@tucuenta" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
-                    <i class="fab fa-tiktok"></i>
-                </a>
-                <a href="https://youtube.com/tucanal" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
-                     <i class="fab fa-youtube"></i>
-                </a>
-                <a href="https://facebook.com/tupagina" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-                     <i class="fab fa-facebook-f"></i>
-                </a>
-            </nav>
-        </footer>
-        <div class="footer-texto">
-            Mat. Prof. 12-3456-789 | © 2025 Dra. Ana Mieles Cedeño
-        </div>
-    </article>
 </body>
 </html>
-
